only security constraint on GET & POST
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@9361 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mvvm/servlets/reports/root/WEB-INF/web.xml
+++ b/mvvm/servlets/reports/root/WEB-INF/web.xml
@@ -17,6 +17,8 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
 
   <security-constraint>
     <web-resource-collection>
+      <http-method>GET</http-method>
+      <http-method>POST</http-method>
       <url-pattern>/*</url-pattern>
     </web-resource-collection>
     <auth-constraint>
