--- a/mvvm/servlets/session-dumper/root/WEB-INF/web.xml
+++ b/mvvm/servlets/session-dumper/root/WEB-INF/web.xml
@@ -18,6 +18,8 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>Session Dumper</web-resource-name>
+      <http-method>GET</http-method>
+      <http-method>POST</http-method>
       <url-pattern>/*</url-pattern>
     </web-resource-collection>
     <auth-constraint>
