--- a/debian/control
+++ b/debian/control
@@ -1987,7 +1987,7 @@ Description: Untangle Server Thirdparty Libraries
 
 Package: mvvm
 Architecture: any
-Depends: jre-mv, libmvvm-thirdparty, sudo, iptables (>= 1.3.3-mv1), restore-mv, libxml2, kernel-mv, pump-mv, ntp-simple, snmpd, snmp, sg3-utils, ddclient, slapd, ldap-utils, libnfnetlink0, libnetfilter-queue0, db4.2-util, ujac-to-pdf, at, ebtables, atop, mime-support, nsis, nsis-mv, dnsmasq, pppoe, bridge-utils, libsysfs1, rbot-mv, iputils-ping
+Depends: jre-mv, libmvvm-thirdparty, sudo, iptables (>= 1.3.3-mv1), restore-mv, libxml2, kernel-mv, pump-mv, ntp-simple, snmpd, snmp, sg3-utils, ddclient, slapd, ldap-utils, libnfnetlink0, libnetfilter-queue0, db4.2-util, ujac-to-pdf, at, ebtables, atop, mime-support, nsis, nsis-mv, dnsmasq, pppoe, bridge-utils, libsysfs1, rbot-mv, iputils-ping, curl
 Pre-Depends: postgresql-server-mv
 Conflicts: xenon, xenon-dbg, dlocate, slocate
 XB-Display-Name: Untangle Server
