svn merge -r 9884:9885 svn://chef/branch/alpine/release-4.2
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@9886 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mvvm/servlets/onlinestore/root/WEB-INF/web.xml
+++ b/mvvm/servlets/onlinestore/root/WEB-INF/web.xml
@@ -75,6 +75,6 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 
   <login-config>
     <auth-method>BASIC</auth-method>
-    <realm-name>Edgeguard Administrator</realm-name>
+    <realm-name>Untangle Administration</realm-name>
   </login-config>
 </web-app>
