--- a/mvvm/servlets/reports/root/WEB-INF/web.xml
+++ b/mvvm/servlets/reports/root/WEB-INF/web.xml
@@ -32,6 +32,6 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
 
   <login-config>
     <auth-method>BASIC</auth-method>
-    <realm-name>Edgeguard Administrator</realm-name>
+    <realm-name>Untangle Administration</realm-name>
   </login-config>
 </web-app>
