jre-mv is gone, untangle-client-windows-jre and sun-java5-jre now replace it. untangle-client doesn't depend on mvvm no more.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@10012 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -1908,7 +1908,7 @@ Description: Untangle Client
 
 Package: untangle-client
 Architecture: any
-Depends: mvvm
+Depends: untangle-client-windows-jre
 Provides: metavize-client
 Conflicts: metavize-client (<< 4.1)
 Replaces: metavize-client (<< 4.1)
