Don't force a specific minor version of the JDK to build with.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@10052 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/buildtools/Makefile.in
+++ b/buildtools/Makefile.in
@@ -28,7 +28,7 @@ JDK_HOME      ?= /opt/jdk
 java_include_base=$(JDK_HOME)/include
 
 # We need to set JAVA_HOME too as the 'ant' binary needs it.
-JAVA_HOME     ?= /usr/lib/jvm/java-1.5.0-sun-1.5.0.10
+JAVA_HOME     ?= /usr/lib/jvm/java-1.5.0-sun
 
 local_lib_path=lib
 
