--- a/rakefile
+++ b/rakefile
@@ -1,5 +1,8 @@
 # -*-ruby-*-
 
+# Certified Filthy2007
+ENV["JAVA_HOME"] = "/usr/lib/jvm/java-1.5.0-sun"
+
 $DevelBuild = true
 ARGV.each do |arg|
   if "pkgs" == arg then
