--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,10 @@
 # This is the debhelper compatibility version to use.
 export DH_COMPAT=4
 
-MKDIR=/bin/mkdir -p
+PACKAGES := $(shell dh_listpackages)
+MVVM_DESTDIR := $(CURDIR)/debian/mvvm
+
+TMP_NAT_DEB := /tmp/nat-transform.deb
 
 ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -g
@@ -26,26 +29,22 @@ configure-stamp:
 	@dh_testdir
 	@touch configure-stamp
 
-# Assumes rake has already been run and the files are in the right
-# places, mostly
 build-arch: configure-stamp  build-arch-stamp
 build-arch-stamp:
 	@dh_testdir
 
-	@echo -e "==> make\n"
-	@rm -f ./debian/tmp/stamp*
+	# FIXME: only one of the 2 build- is needed
+	rake build
 
-	@for i in `cat debian/control | grep Package | awk '{print $$2}'` ; do \
-	  mkdir -p ./debian/tmp/usr/share/doc/$i ; \
-	  cp ./debian/copyright ./debian/tmp/usr/share/doc/$i ; \
-	done
+	# FIXME: what's that ?
+	rm -f ./debian/tmp/stamp*
 
-	@sleep 2
 	@touch build-arch-stamp
 
 build-indep:  configure-stamp build-indep-stamp
 build-indep-stamp:
 	@dh_testdir
+
 	@touch build-indep-stamp
 
 build: build-arch build-indep
@@ -56,7 +55,9 @@ clean:
 	@rm -f build-arch-stamp build-indep-stamp configure-stamp
 	@rm -f ./debian/*.init
 	@dh_clean
+	rake clean
 
+# FIXME: they look about the same to me...
 # distclean is too agressive to run in developer trees, so only run
 # for 'make release'
 distclean:
@@ -66,51 +67,50 @@ distclean:
 	@rm -f ./debian/*.init
 	@dh_clean
 
-install: DH_OPTIONS=
 install: build
 	@dh_testdir
 	@dh_testroot
 	@dh_installdirs -a
+	rake install
 
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-#	dh_movefiles
-#	dh_installdebconf
-	dh_shlibdeps
-	dh_installdocs
-#	dh_installexamples
-#	dh_installmenu
-	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-	dh_installinit -n
-#	dh_installcron
-#	dh_installman
-#	dh_installinfo
-#	dh_undocumented
-	dh_installchangelogs
-	dh_strip
-#	dh_link
-	dh_compress
-#	dh_fixperms
-	dh_installdeb
-#	dh_perl
-#	dh_gencontrol
-	for i in `cat debian/control | grep Package | awk '{print $$2}'` ; do \
-	  dh_gencontrol -p$$i -u-is -u-v"`cat ../VERSION``cat debian/$$i.version`" ; \
+binary-arch: install
+	@dh_testdir
+	@dh_testroot
+#	@dh_movefiles
+#	@dh_installdebconf
+	@dh_shlibdeps
+	@dh_installdocs
+#	@dh_installexamples
+#	@dh_installmenu
+	@dh_installlogrotate
+#	@dh_installemacsen
+#	@dh_installpam
+#	@dh_installmime
+	@dh_installinit -n
+#	@dh_installcron
+#	@dh_installman
+#	@dh_installinfo
+#	@dh_undocumented
+	@dh_installchangelogs
+	@dh_strip
+#	@dh_link
+	@dh_compress
+#	@dh_fixperms
+	@dh_installdeb
+#	@dh_perl
+#	@dh_gencontrol
+	@for i in $(PACKAGES) ; do \
+	  dh_gencontrol -p$$i -u-is -u-v"`cat VERSION``cat debian/version`" ; \
 	done
-	dh_md5sums
-	dh_builddeb --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
+	@dh_md5sums
+	@dh_builddeb --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
+	# FIXME: oh, nastiness...
+	@cp -f ../nat-transform_*`cat debian/version`*deb $(MVVM_DESTDIR)/var/lib/mvvm/nat-transform.deb
+	@dh_md5sums
+	@dh_builddeb -p mvvm --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
 
-mvvm: build install
-	dh_install -i -p$@ ../nat-transform_*`cat debian/$@.version`*deb var/lib/mvvm/nat-transform.deb
-
-binary-indep: build install
+binary-indep: install
 # nothing to do
-
-
 
 binary: binary-indep binary-arch
 .PHONY: build clean distclean binary-indep binary install configure
