debhelper compat level set to 4 upgraded Standards-Version to current (3.7.2)
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@10135 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/rules
+++ b/debian/rules
@@ -104,7 +104,7 @@ binary-arch: install
 	done
 	@dh_md5sums
 	@dh_builddeb --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
-	# FIXME: oh, nastiness...
+	# FIXME: oh, nastiness (not as nasty as Dirk's rebuildmvvm.sh, but that ain't saying much heh)
 	@cp -f ../nat-transform_*`cat debian/version`*deb $(MVVM_DESTDIR)/var/lib/mvvm/nat-transform.deb
 	@dh_md5sums
 	@dh_builddeb -p mvvm --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
