Allow people to build Debian packages even if debian/version (byproduct of make version) doesn't exist.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@10239 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/rules
+++ b/debian/rules
@@ -98,9 +98,9 @@ binary-arch: install
 #	@dh_fixperms
 	@dh_installdeb
 #	@dh_perl
-#	@dh_gencontrol
+if [[ -f debian/version ]] ; then dh_gencontrol -- -v"`cat debian/version`" ; else dh_gencontrol ; fi
 	@for i in $(PACKAGES) ; do \
-	  dh_gencontrol -p$$i -u-is -u-v"`cat debian/version`" ; \
+if [[ -f debian/version ]] ; then dh_gencontrol -- -v"`cat debian/version`" ; else dh_gencontrol ; fi
 	done
 	@dh_md5sums
 	@dh_builddeb --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
