Fix my previous Makefile mistake. Separate libalpine from the mvvm package.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@10270 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/rules
+++ b/debian/rules
@@ -98,9 +98,8 @@ binary-arch: install
 #	@dh_fixperms
 	@dh_installdeb
 #	@dh_perl
-if [[ -f debian/version ]] ; then dh_gencontrol -- -v"`cat debian/version`" ; else dh_gencontrol ; fi
 	@for i in $(PACKAGES) ; do \
-if [[ -f debian/version ]] ; then dh_gencontrol -- -v"`cat debian/version`" ; else dh_gencontrol ; fi
+	if [[ -f debian/version ]] ; then dh_gencontrol -- -v"`cat debian/version`" ; else dh_gencontrol ; fi \
 	done
 	@dh_md5sums
 	@dh_builddeb --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
