--- a/rakefile
+++ b/rakefile
@@ -9,20 +9,20 @@ task :all => :devel
 
 task :clean do
   Kernel.system( "make -C downloads distclean" )
-  FileUtils.rm_rf($BuildEnv.devel) if File.exist?($BuildEnv.devel)
-  FileUtils.rm_rf($BuildEnv.staging) if File.exist?($BuildEnv.staging)
+  FileUtils.rm_rf(AlpineBuildEnv.devel) if File.exist?($BuildEnv.devel)
+  FileUtils.rm_rf(AlpineBuildEnv.staging) if File.exist?($BuildEnv.staging)
   FileUtils.rm_rf("foo.dot") if File.exist?("foo.dot")
   FileUtils.rm_rf(FileList['debian/*'].select { |f| File.directory?(f) })
   ## Clear the stamp hashes
   Rake::StampHash.instance.clear
 end
 
-task :build => [Package['mvvm'], Package['untangle-client'], Package['tran']]
+task :build => [BuildEnv::ALPINE['mvvm'], BuildEnv::ALPINE['untangle-client'], BuildEnv::ALPINE['tran']]
 
-task :devel => [Package['install'], $InstallTarget]
+task :devel => [BuildEnv::ALPINE['install'], $InstallTarget]
 
 # See rake-util.rb, we check the arguments for "pkgs"
-task :install => [Package['install'], $InstallTarget] do
+task :install => [BuildEnv::ALPINE['install'], $InstallTarget] do
   # FIXME: hrm, we're taking init scripts from the staging area under
   # debian/packagename/... and put it back under debian/ ????
   FileList['./debian/**/etc/init.d/*'].each do |f|
