--- a/rakefile
+++ b/rakefile
@@ -9,8 +9,8 @@ task :all => :devel
 
 task :clean do
   Kernel.system( "make -C downloads distclean" )
-  FileUtils.rm_rf(AlpineBuildEnv.devel) if File.exist?($BuildEnv.devel)
-  FileUtils.rm_rf(AlpineBuildEnv.staging) if File.exist?($BuildEnv.staging)
+  FileUtils.rm_rf(BuildEnv::ALPINE.devel) if File.exist?($BuildEnv.devel)
+  FileUtils.rm_rf(BuildEnv::ALPINE.staging) if File.exist?($BuildEnv.staging)
   FileUtils.rm_rf("foo.dot") if File.exist?("foo.dot")
   FileUtils.rm_rf(FileList['debian/*'].select { |f| File.directory?(f) })
   ## Clear the stamp hashes
