--- a/buildtools/Makefile
+++ b/buildtools/Makefile
@@ -34,6 +34,6 @@ pkg: checkroot
 
 release: checkroot
 	# FIXME: come on now, let's be real !!!
-	if [[ `basename $$(pwd)` != "alpine" ]] ; then dput -c $(BUILDTOOLS_DIR)/dput.cf mephisto ../`basename $$(pwd)`_`cat debian/version`*.changes ; else dput -c $(BUILDTOOLS_DIR)/dput.cf mephisto ../mvvm_`cat debian/version`*.changes ; fi
+	if [ `basename $$(pwd)` != "alpine" ] ; then dput -c $(BUILDTOOLS_DIR)/dput.cf mephisto ../`basename $$(pwd)`_`cat debian/version`*.changes ; else dput -c $(BUILDTOOLS_DIR)/dput.cf mephisto ../mvvm_`cat debian/version`*.changes ; fi
 
 .PHONY: checkroot clean version source pkg release
