--- a/downloads/Makefile
+++ b/downloads/Makefile
@@ -16,7 +16,7 @@ UNZIP=unzip
 ###############################################################################
 tarballs_gz=apache-ant-1.6.5.tar.gz commons-beanutils-1.7.0.tar.gz \
 	commons-digester-1.7.tar.gz cpptasks-1.0b3.tar.gz \
-	hibernate-3.2.1.ga.tar.gz hibernate-annotations-3.2.0.GA.tar.gz \
+	hibernate-3.2.4.sp1.tar.gz hibernate-annotations-3.3.0.GA.tar.gz \
 	apache-tomcat-5.5.17-embed.tar.gz jfreechart-1.0.1.tar.gz \
 	logging-log4j-1.2.14.tar.gz trove-1.0.2.tar.gz xdoclet-lib-1.2.3.tar.gz \
 	bcel-5.2.tar.gz c3p0-0.9.0.4.bin.tar.gz velocity-1.4.tar.gz \
