during clean, rm debian/version
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@10516 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/buildtools/Makefile
+++ b/buildtools/Makefile
@@ -10,6 +10,7 @@ checkroot:
 clean: checkroot
 	svn revert debian/changelog
 	fakeroot debian/rules clean
+	rm -f debian/version
 
 version: checkroot
 	svn revert debian/changelog
