--- a/debian/control
+++ b/debian/control
@@ -528,7 +528,7 @@ Description: Kaspersky Virus Blocker
 
 Package: clam-transform
 Architecture: any
-Depends: mvvm, virus-base, clamav-mv, http-casing, ftp-casing, mail-casing
+Depends: mvvm, virus-base, untangle-clamav-config, http-casing, ftp-casing, mail-casing
 XB-Display-Name: Virus Blocker
 XB-View-Position: 70
 XB-Is-Security: true
@@ -1047,7 +1047,7 @@ Description: Spam Blocker
 
 Package: clamphish-transform
 Architecture: any
-Depends: mvvm, spam-base, clamav-mv, mail-casing, http-casing
+Depends: mvvm, spam-base, untangle-clamav-config, mail-casing, http-casing
 XB-Display-Name: Phish Blocker
 XB-View-Position: 17
 XB-Is-Security: true
@@ -1702,7 +1702,7 @@ Description: Untangle Server Thirdparty Libraries
 
 Package: mvvm
 Architecture: any
-Depends: sun-java5-jre, untangle-client-windows-jre, libalpine, libmvvm-thirdparty, sudo, iptables (>= 1.3.3-mv1), restore-mv, libxml2, kernel-mv, pump-mv, ntp-simple, snmpd, snmp, sg3-utils, ddclient, slapd, ldap-utils, libnfnetlink0, libnetfilter-queue0, db4.2-util, ujac-to-pdf, at, ebtables, atop, mime-support, nsis, nsis-mv, dnsmasq, pppoe, bridge-utils, libsysfs1, iputils-ping, curl
+Depends: untangle-client-windows-jre, libalpine, libmvvm-thirdparty, sudo, iptables (>= 1.3.3-mv1), restore-mv, libxml2, kernel-mv, untangle-pump-config, ntp-simple, snmpd, snmp, sg3-utils, ddclient, slapd, ldap-utils, libnfnetlink0, libnetfilter-queue0, db4.2-util, ujac-to-pdf, at, ebtables, atop, mime-support, nsis, nsis-mv, dnsmasq, pppoe, bridge-utils, libsysfs1, iputils-ping, curl
 Pre-Depends: postgresql-server-mv
 Conflicts: xenon, xenon-dbg, dlocate, slocate
 XB-Display-Name: Untangle Server
