Renaming postgresql-mv to untangle-postgresql-config
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@10535 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -238,7 +238,7 @@ Description: Spyware Blocker
 
 Package: httpblocker-transform
 Architecture: any
-Depends: mvvm, http-casing, urlblacklist.com-mv
+Depends: mvvm, http-casing, untangle-urlblacklist.com
 XB-Display-Name: Web Filter
 XB-View-Position: 30
 XB-Is-Security: true
