Renaming snort-rules-current to untangle-snort-rules
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@10555 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -1419,7 +1419,7 @@ Description: OpenVPN
 
 Package: ids-transform
 Architecture: any
-Depends: mvvm, http-casing, snort-rules-current
+Depends: mvvm, http-casing, untangle-snort-rules
 XB-Display-Name: Intrusion Prevention
 XB-View-Position: 75
 XB-Is-Security: true
