--- a/downloads/Makefile.in
+++ b/downloads/Makefile.in
@@ -1,5 +1,5 @@
-ifndef ALPINE_MAKE
-ALPINE_MAKE	= true
+ifndef SRC_MAKE
+SRC_MAKE	= true
 
 ifndef PRODUCTION
   USE_DEBUG:=true
@@ -9,17 +9,17 @@ endif
 
 ## Location of the src in each sub directory, the sub directory make
 ## may overwrite this value
-src_path=src
+source_path=src
 
 ## Random unique target string suffix to guarantee that the default
 ## ensure dir target does not conflict with any other targets
 dir_target=ensure_dir_target
 
 ## Location of the build directory
-alpine_root     = $(dir $(word $(words $(MAKEFILE_LIST)),$(MAKEFILE_LIST)))../
-alpine_root    := $(shell mkdir -p $(alpine_root)/ &> /dev/null && cd $(alpine_root)/ &> /dev/null && pwd)
+src_root     = $(dir $(word $(words $(MAKEFILE_LIST)),$(MAKEFILE_LIST)))../
+src_root    := $(shell mkdir -p $(src_root)/ &> /dev/null && cd $(src_root)/ &> /dev/null && pwd)
 # build_dist     ?= /tmp/jdimv
-build_dist     ?= $(alpine_root)/output
+build_dist     ?= $(src_root)/output
 build_prefix   ?= $(build_dist)
 build_lib_path  = ${build_dist}/usr/lib/mvvm
 build_inc_path  = ${build_dist}/usr/include
@@ -50,7 +50,7 @@ JMVUTIL_PKG   = 212
 ## is just ../bin) and if you are in the base directory this will just
 ## resolve to ./bin
 
-BINDIR        = $(alpine_root)/buildtools
+BINDIR        = $(src_root)/buildtools
 
 CC	      = gcc
 DEFINES       = -D_GNU_SOURCE -D_REENTRANT
@@ -72,10 +72,10 @@ LD            = ld
 LN            = ln
 STRIP         = strip
 
-ANT_HOME        = $(alpine_root)/downloads/output/apache-ant-1.6.5
+ANT_HOME        = $(src_root)/downloads/output/apache-ant-1.6.5
 ANTCONTRIB_VERSION = 1.0b2
-ANTCONTRIB_HOME = $(alpine_root)/downloads/output/ant-contrib-$(ANTCONTRIB_VERSION)
-ANTPACK200_HOME = $(alpine_root)/downloads/output/ant-pack200
+ANTCONTRIB_HOME = $(src_root)/downloads/output/ant-contrib-$(ANTCONTRIB_VERSION)
+ANTPACK200_HOME = $(src_root)/downloads/output/ant-pack200
 ANT_CLASSPATH   = $(ANTCONTRIB_HOME)/lib/ant-contrib-$(ANTCONTRIB_VERSION).jar:$(ANTPACK200_HOME)/Pack200Task.jar:${JDK_HOME}/lib/tools.jar
 ANT             = ANT_OPTS="-XX:MaxPermSize=128m" CLASSPATH=$(ANT_CLASSPATH) JDK_HOME=$(JDK_HOME) JAVA_HOME=$(JAVA_HOME) $(ANT_HOME)/bin/ant -Dworld.root=$(build_dist) -Dbuild.prefix=$(build_prefix) -emacs
 
@@ -109,7 +109,7 @@ default: all
 %.a: $(local_lib_path).$(dir_target)
 	@$(ENSUREDIR) $(local_lib_path)
 	@echo "==> ld ($(objects)) => $@, $(local_lib_path)/$@"
-	@$(LD) $(LDFLAGS) -r -o tmp.o $(patsubst %,$(src_path)/%,$(objects))
+	@$(LD) $(LDFLAGS) -r -o tmp.o $(patsubst %,$(source_path)/%,$(objects))
 	@$(STRIPCMD) tmp.o
 	@$(AR) -cr $(local_lib_path)/$@ tmp.o
 	@$(RANLIB) $(local_lib_path)/$@
@@ -120,12 +120,12 @@ default: all
 	@$(ENSUREDIR) $(@:.$(dir_target)=) $(dir_mode)
 
 clean.default:
-	@echo "==> clean *.class, *.o, *.core, core.*, $(src_path)/version.h, test"
+	@echo "==> clean *.class, *.o, *.core, core.*, $(source_path)/version.h, test"
 	@${RM} -f `find . -name "*.class"`
 	@${RM} -f `find . -name "*.o"`
 	@${RM} -f `find . -name "*.core"`
 	@${RM} -f `find . -name "core.*"`
-	@${RM} -f $(src_path)/version.h
+	@${RM} -f $(source_path)/version.h
 	@if test -f test/Makefile; then make -C test clean ; fi
 	@if test -f example/Makefile; then make -C example clean; fi
 
@@ -138,7 +138,7 @@ test.default: test/Makefile
 	make -C test
 
 tags.default:
-	@echo "==> TAGS: Tags for this library are created from the alpine directory"
+	@echo "==> TAGS: Tags for this library are created from the src directory"
 
 ## ant targets
 ## Only call this target if the ANT hasn't been invoked
@@ -169,9 +169,9 @@ endif
 		$(INSTALL_DATA) -m $(inc_mode) $$i $(build_inc_path) ; \
 	done
 
-$(src_path)/version.h: VERSION
+$(source_path)/version.h: VERSION
 	@echo "==> $@"
 	@rm -f $@
 	@sed -e 's/.*/#define VERSION "&"/' $< > $@
 
-endif ## ALPINE_MAKE
+endif ## SRC_MAKE
