--- a/rakefile
+++ b/rakefile
@@ -17,8 +17,8 @@ task :clean do
   Rake::StampHash.instance.clear
 end
 
-# task :build => [BuildEnv::SRC['mvvm'], BuildEnv::SRC['untangle-client'], BuildEnv::SRC['tran']]
-task :build => [BuildEnv::SRC['mvvm'], BuildEnv::SRC['untangle-client']]
+# task :build => [BuildEnv::SRC['uvm'], BuildEnv::SRC['untangle-client'], BuildEnv::SRC['tran']]
+task :build => [BuildEnv::SRC['uvm'], BuildEnv::SRC['untangle-client']]
 
 task :devel => [BuildEnv::SRC['install'], BuildEnv::SRC.installTarget]
 
