--- a/tran/clamphish/servlets/idblocker/root/WEB-INF/web.xml
+++ b/tran/clamphish/servlets/idblocker/root/WEB-INF/web.xml
@@ -14,11 +14,11 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
-  <display-name>ClamPhish WebApp</display-name>
+  <display-name>Phish WebApp</display-name>
 
   <servlet>
     <servlet-name>UnblockerServlet</servlet-name>
-    <servlet-class>com.untangle.node.clamphish.UnblockerServlet</servlet-class>
+    <servlet-class>com.untangle.node.phish.UnblockerServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
  </servlet>
 
