--- a/tran/httpblocker/servlets/webfilter/root/WEB-INF/web.xml
+++ b/tran/httpblocker/servlets/webfilter/root/WEB-INF/web.xml
@@ -14,7 +14,7 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
-  <display-name>HttpBlocker WebApp</display-name>
+  <display-name>WebFilter WebApp</display-name>
 
   @JSP_PRE_COMPILED_SERVLETS@
 
