Double dollar sign.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@10785 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/buildtools/Makefile
+++ b/buildtools/Makefile
@@ -25,7 +25,7 @@ source: checkroot
 		--exclude="todo" \
 		--exclude="staging" \
 		--exclude="dist" \
-		-f ../`dpkg-parsechangelog | awk '/Source: / { print $$2 }'`_`perl -npe 's/-.*?//' debian/version`.orig.tar.gz ../`basename $$(pwd)`
+		-f ../`dpkg-parsechangelog | awk '/Source: / { print $$2 }'`_`perl -npe 's/(.+)-.*$/$$1/' debian/version`.orig.tar.gz ../`basename $$(pwd)`
 
 pkg: checkroot
 	# FIXME: sign packages when we move to apt 0.6
